--- a/css/custom.scss
+++ b/css/custom.scss
@@ -397,6 +397,7 @@ body {
             height: 260px;
             padding: 25px;
             border-right: 1px solid #ccc;
+            background-color: #fff;
 
             h2 {
                 text-align: start;
@@ -418,6 +419,7 @@ body {
                 padding: 20px;
                 border-right: 1px solid #ccc;
                 border-bottom: 1px solid #ccc;
+                background-color: #fff;
 
                 h6 {
                     font-size: .9rem;
